--- a/tools/extension/css/style_content.css
+++ b/tools/extension/css/style_content.css
@@ -85,3 +85,79 @@
 select:disabled {
     background: #E2EAF2;
 }
+
+.inp-sea {
+  width: 65%;
+  border: 1px solid #ccc;
+  padding: 3px;
+  left: 0;
+  margin: 0;
+}
+
+.sel-sea {
+  width: 34%;
+}
+
+.rela {
+  position: relative;
+}
+
+.rela-se {
+  width: 90%;
+  margin: 12px;
+  padding-bottom: 5px;
+}
+
+.top-inp {
+  position: absolute;
+  z-index: 2;
+  top: -100%;
+}
+
+
+.title-up {
+  position: relative;
+  text-align: center;
+  color: #bbb;
+  margin: 5px;
+}
+
+.title-up > span:not([class]){
+  display: inline-block;
+  height: 2px;
+  width: 70px;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+  top: 30%;
+}
+
+.result-sea {
+  position: absolute;
+  left: 12px;
+  z-index: 2;
+  background-color: #fff;
+  padding: 5px;
+  width: 100%;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 10px #ccc;
+  min-height: 15px;
+  text-align: left;
+  display: none;
+}
+
+.result-sea > span {
+  display: block;
+  position: absolute;
+  left: 100%;
+  cursor: pointer;
+  top: 0;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: bold;
+  transform: translate(-100%, 0);
+}
